--- a/modules/SASjsApiClient.html
+++ b/modules/SASjsApiClient.html
@@ -16,7 +16,7 @@
 <li><a href="SASjsApiClient.html">SASjsApiClient</a></li></ul>
 <h1>Module SASjsApiClient</h1></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/sasjs/adapter/blob/da7579a/src/SASjsApiClient.ts#L1">SASjsApiClient.ts:1</a></li></ul></aside>
+<li>Defined in <a href="https://github.com/sasjs/adapter/blob/a69ebd0/src/SASjsApiClient.ts#L1">SASjsApiClient.ts:1</a></li></ul></aside>
 <section class="tsd-panel-group">
 <section class="tsd-panel tsd-typography"></section></section>
 <section class="tsd-panel-group tsd-index-group">
@@ -29,6 +29,7 @@
 <section class="tsd-index-section">
 <h3 class="tsd-index-heading">Interfaces</h3>
 <div class="tsd-index-list"><a href="../interfaces/SASjsApiClient.SASjsAuthResponse.html" class="tsd-index-link tsd-kind-interface tsd-parent-kind-module"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><rect fill="var(--color-icon-background)" stroke="var(--color-ts-interface)" stroke-width="1.5" x="1" y="1" width="22" height="22" rx="6" id="icon-256-path"></rect><path d="M9.51 16V15.016H11.298V8.224H9.51V7.24H14.19V8.224H12.402V15.016H14.19V16H9.51Z" fill="var(--color-text)" id="icon-256-text"></path></svg><span>SASjs<wbr/>Auth<wbr/>Response</span></a>
+<a href="../interfaces/SASjsApiClient.ScriptExecutionResult.html" class="tsd-index-link tsd-kind-interface tsd-parent-kind-module"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-256-path"></use><use href="#icon-256-text"></use></svg><span>Script<wbr/>Execution<wbr/>Result</span></a>
 </div></section></section></section></div>
 <div class="col-4 col-menu menu-sticky-wrap menu-highlight">
 <div class="tsd-navigation settings">
@@ -57,7 +58,8 @@
 <nav class="tsd-navigation secondary menu-sticky">
 <ul>
 <li class="tsd-kind-class tsd-parent-kind-module"><a href="../classes/SASjsApiClient.SASjsApiClient.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-128-path"></use><use href="#icon-128-text"></use></svg>SASjs<wbr/>Api<wbr/>Client</a></li>
-<li class="tsd-kind-interface tsd-parent-kind-module"><a href="../interfaces/SASjsApiClient.SASjsAuthResponse.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-256-path"></use><use href="#icon-256-text"></use></svg>SASjs<wbr/>Auth<wbr/>Response</a></li></ul></nav></div></div>
+<li class="tsd-kind-interface tsd-parent-kind-module"><a href="../interfaces/SASjsApiClient.SASjsAuthResponse.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-256-path"></use><use href="#icon-256-text"></use></svg>SASjs<wbr/>Auth<wbr/>Response</a></li>
+<li class="tsd-kind-interface tsd-parent-kind-module"><a href="../interfaces/SASjsApiClient.ScriptExecutionResult.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-256-path"></use><use href="#icon-256-text"></use></svg>Script<wbr/>Execution<wbr/>Result</a></li></ul></nav></div></div>
 <div class="container tsd-generator">
 <p>Generated using <a href="https://typedoc.org/" target="_blank">TypeDoc</a></p></div>
 <div class="overlay"></div><script src="../assets/main.js"></script></body></html>
