--- a/modules/types.html
+++ b/modules/types.html
@@ -16,7 +16,7 @@
 <li><a href="types.html">types</a></li></ul>
 <h1>Module types</h1></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/sasjs/adapter/blob/784bd20/src/types/index.ts#L1">types/index.ts:1</a></li></ul></aside>
+<li>Defined in <a href="https://github.com/sasjs/adapter/blob/22edcb0/src/types/index.ts#L1">types/index.ts:1</a></li></ul></aside>
 <section class="tsd-panel-group">
 <section class="tsd-panel tsd-typography"></section></section>
 <section class="tsd-panel-group tsd-index-group">
@@ -49,6 +49,10 @@
 <a href="../interfaces/types.SessionVariable.html" class="tsd-index-link tsd-kind-interface tsd-parent-kind-module"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-256-path"></use><use href="#icon-256-text"></use></svg><span>Session<wbr/>Variable</span></a>
 <a href="../interfaces/types.UploadFile.html" class="tsd-index-link tsd-kind-interface tsd-parent-kind-module"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-256-path"></use><use href="#icon-256-text"></use></svg><span>Upload<wbr/>File</span></a>
 <a href="../interfaces/types.WriteStream.html" class="tsd-index-link tsd-kind-interface tsd-parent-kind-module"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-256-path"></use><use href="#icon-256-text"></use></svg><span>Write<wbr/>Stream</span></a>
+</div></section>
+<section class="tsd-index-section">
+<h3 class="tsd-index-heading">Type Aliases</h3>
+<div class="tsd-index-list"><a href="../types/types.PollStrategy.html" class="tsd-index-link tsd-kind-type-alias tsd-parent-kind-module"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><rect fill="var(--color-icon-background)" stroke="var(--color-ts)" stroke-width="1.5" x="1" y="1" width="22" height="22" rx="6" id="icon-4194304-path"></rect><path d="M11.31 16V8.224H8.91V7.24H14.79V8.224H12.39V16H11.31Z" fill="var(--color-text)" id="icon-4194304-text"></path></svg><span>Poll<wbr/>Strategy</span></a>
 </div></section></section></section></div>
 <div class="col-4 col-menu menu-sticky-wrap menu-highlight">
 <div class="tsd-navigation settings">
@@ -94,7 +98,8 @@
 <li class="tsd-kind-interface tsd-parent-kind-module"><a href="../interfaces/types.Session.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-256-path"></use><use href="#icon-256-text"></use></svg>Session</a></li>
 <li class="tsd-kind-interface tsd-parent-kind-module"><a href="../interfaces/types.SessionVariable.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-256-path"></use><use href="#icon-256-text"></use></svg>Session<wbr/>Variable</a></li>
 <li class="tsd-kind-interface tsd-parent-kind-module"><a href="../interfaces/types.UploadFile.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-256-path"></use><use href="#icon-256-text"></use></svg>Upload<wbr/>File</a></li>
-<li class="tsd-kind-interface tsd-parent-kind-module"><a href="../interfaces/types.WriteStream.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-256-path"></use><use href="#icon-256-text"></use></svg>Write<wbr/>Stream</a></li></ul></nav></div></div>
+<li class="tsd-kind-interface tsd-parent-kind-module"><a href="../interfaces/types.WriteStream.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-256-path"></use><use href="#icon-256-text"></use></svg>Write<wbr/>Stream</a></li>
+<li class="tsd-kind-type-alias tsd-parent-kind-module"><a href="../types/types.PollStrategy.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-4194304-path"></use><use href="#icon-4194304-text"></use></svg>Poll<wbr/>Strategy</a></li></ul></nav></div></div>
 <div class="container tsd-generator">
 <p>Generated using <a href="https://typedoc.org/" target="_blank">TypeDoc</a></p></div>
 <div class="overlay"></div><script src="../assets/main.js"></script></body></html>
