--- a/classes/types.SASjsConfig.html
+++ b/classes/types.SASjsConfig.html
@@ -25,7 +25,7 @@ connect to SAS.</p>
 <ul class="tsd-hierarchy">
 <li><span class="target">SASjsConfig</span></li></ul></section><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/sasjs/adapter/blob/f1e1b33/src/types/SASjsConfig.ts#L8">types/SASjsConfig.ts:8</a></li></ul></aside>
+<li>Defined in <a href="https://github.com/sasjs/adapter/blob/5756638/src/types/SASjsConfig.ts#L8">types/SASjsConfig.ts:8</a></li></ul></aside>
 <section class="tsd-panel-group tsd-index-group">
 <section class="tsd-panel tsd-index-panel">
 <details class="tsd-index-content tsd-index-accordion" open><summary class="tsd-accordion-summary tsd-index-summary">
@@ -49,6 +49,7 @@ connect to SAS.</p>
 <a href="types.SASjsConfig.html#serverType" class="tsd-index-link tsd-kind-property tsd-parent-kind-class"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-1024-path"></use><use href="#icon-1024-text"></use></svg><span>server<wbr/>Type</span></a>
 <a href="types.SASjsConfig.html#serverUrl" class="tsd-index-link tsd-kind-property tsd-parent-kind-class"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-1024-path"></use><use href="#icon-1024-text"></use></svg><span>server<wbr/>Url</span></a>
 <a href="types.SASjsConfig.html#useComputeApi" class="tsd-index-link tsd-kind-property tsd-parent-kind-class"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-1024-path"></use><use href="#icon-1024-text"></use></svg><span>use<wbr/>Compute<wbr/>Api</span></a>
+<a href="types.SASjsConfig.html#verbose" class="tsd-index-link tsd-kind-property tsd-parent-kind-class"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-1024-path"></use><use href="#icon-1024-text"></use></svg><span>verbose?</span></a>
 </div></section></div></details></section></section>
 <section class="tsd-panel-group tsd-member-group">
 <h2>Constructors</h2>
@@ -72,7 +73,7 @@ When using appLoc, the paths provided in the <code>request</code> function shoul
 <em>without</em> a leading slash (/).</p>
 </div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/sasjs/adapter/blob/f1e1b33/src/types/SASjsConfig.ts#L39">types/SASjsConfig.ts:39</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/sasjs/adapter/blob/5756638/src/types/SASjsConfig.ts#L39">types/SASjsConfig.ts:39</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class"><a id="contextName" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>context<wbr/>Name</span><a href="#contextName" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">context<wbr/>Name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = &#39;&#39;</span></div>
@@ -80,14 +81,14 @@ When using appLoc, the paths provided in the <code>request</code> function shoul
 Example value: &#39;SAS Job Execution compute context&#39;</p>
 </div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/sasjs/adapter/blob/f1e1b33/src/types/SASjsConfig.ts#L52">types/SASjsConfig.ts:52</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/sasjs/adapter/blob/5756638/src/types/SASjsConfig.ts#L56">types/SASjsConfig.ts:56</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class"><a id="debug" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>debug</span><a href="#debug" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">debug<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol"> = true</span></div>
 <div class="tsd-comment tsd-typography"><p>Set to <code>true</code> to enable additional debugging.</p>
 </div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/sasjs/adapter/blob/f1e1b33/src/types/SASjsConfig.ts#L47">types/SASjsConfig.ts:47</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/sasjs/adapter/blob/5756638/src/types/SASjsConfig.ts#L47">types/SASjsConfig.ts:47</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class"><a id="httpsAgentOptions" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>https<wbr/>Agent<wbr/>Options</span><a href="#httpsAgentOptions" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">https<wbr/>Agent<wbr/>Options<span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-type">AgentOptions</span></div>
@@ -96,14 +97,14 @@ By providing <code>key</code>, <code>cert</code>, <code>ca</code> to connect wit
 Other options can be set <code>rejectUnauthorized</code> and <code>requestCert</code></p>
 </div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/sasjs/adapter/blob/f1e1b33/src/types/SASjsConfig.ts#L67">types/SASjsConfig.ts:67</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/sasjs/adapter/blob/5756638/src/types/SASjsConfig.ts#L71">types/SASjsConfig.ts:71</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class"><a id="loginMechanism" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>login<wbr/>Mechanism</span><a href="#loginMechanism" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">login<wbr/>Mechanism<span class="tsd-signature-symbol">:</span> <a href="../enums/types.LoginMechanism.html" class="tsd-signature-type" data-tsd-kind="Enumeration">LoginMechanism</a><span class="tsd-signature-symbol"> = LoginMechanism.Default</span></div>
 <div class="tsd-comment tsd-typography"><p>Supported login mechanisms are - Redirected and Default</p>
 </div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/sasjs/adapter/blob/f1e1b33/src/types/SASjsConfig.ts#L71">types/SASjsConfig.ts:71</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/sasjs/adapter/blob/5756638/src/types/SASjsConfig.ts#L75">types/SASjsConfig.ts:75</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class"><a id="pathSAS9" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>pathSAS9</span><a href="#pathSAS9" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">pathSAS9<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = &#39;&#39;</span></div>
@@ -111,7 +112,7 @@ Other options can be set <code>rejectUnauthorized</code> and <code>requestCert</
 will use &#39;/SASStoredProcess/do&#39; on SAS 9.</p>
 </div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/sasjs/adapter/blob/f1e1b33/src/types/SASjsConfig.ts#L24">types/SASjsConfig.ts:24</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/sasjs/adapter/blob/5756638/src/types/SASjsConfig.ts#L24">types/SASjsConfig.ts:24</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class"><a id="pathSASJS" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>pathSASJS</span><a href="#pathSASJS" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">pathSASJS<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = &#39;&#39;</span></div>
@@ -119,7 +120,7 @@ will use &#39;/SASStoredProcess/do&#39; on SAS 9.</p>
 will use &#39;/SASjsApi/stp/execute&#39; on SAS JS.</p>
 </div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/sasjs/adapter/blob/f1e1b33/src/types/SASjsConfig.ts#L19">types/SASjsConfig.ts:19</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/sasjs/adapter/blob/5756638/src/types/SASjsConfig.ts#L19">types/SASjsConfig.ts:19</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class"><a id="pathSASViya" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>pathSASViya</span><a href="#pathSASViya" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">pathSASViya<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = &#39;&#39;</span></div>
@@ -127,7 +128,7 @@ will use &#39;/SASjsApi/stp/execute&#39; on SAS JS.</p>
 will use &#39;/SASJobExecution&#39; on SAS Viya.</p>
 </div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/sasjs/adapter/blob/f1e1b33/src/types/SASjsConfig.ts#L29">types/SASjsConfig.ts:29</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/sasjs/adapter/blob/5756638/src/types/SASjsConfig.ts#L29">types/SASjsConfig.ts:29</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class"><a id="requestHistoryLimit" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>request<wbr/>History<wbr/>Limit</span><a href="#requestHistoryLimit" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">request<wbr/>History<wbr/>Limit<span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-type">number</span><span class="tsd-signature-symbol"> = 10</span></div>
@@ -135,14 +136,14 @@ will use &#39;/SASJobExecution&#39; on SAS Viya.</p>
 may affect browser performance, especially with debug (logs) enabled.</p>
 </div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/sasjs/adapter/blob/f1e1b33/src/types/SASjsConfig.ts#L76">types/SASjsConfig.ts:76</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/sasjs/adapter/blob/5756638/src/types/SASjsConfig.ts#L80">types/SASjsConfig.ts:80</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class"><a id="serverType" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>server<wbr/>Type</span><a href="#serverType" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">server<wbr/>Type<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">null</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">ServerType</span><span class="tsd-signature-symbol"> = null</span></div>
 <div class="tsd-comment tsd-typography"><p>Can be <code>SAS9</code> or <code>SASVIYA</code>.</p>
 </div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/sasjs/adapter/blob/f1e1b33/src/types/SASjsConfig.ts#L43">types/SASjsConfig.ts:43</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/sasjs/adapter/blob/5756638/src/types/SASjsConfig.ts#L43">types/SASjsConfig.ts:43</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class"><a id="serverUrl" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>server<wbr/>Url</span><a href="#serverUrl" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">server<wbr/>Url<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = &#39;&#39;</span></div>
@@ -151,7 +152,7 @@ Can be omitted, eg if serving directly from the SAS Web Server or being
 streamed.</p>
 </div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/sasjs/adapter/blob/f1e1b33/src/types/SASjsConfig.ts#L14">types/SASjsConfig.ts:14</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/sasjs/adapter/blob/5756638/src/types/SASjsConfig.ts#L14">types/SASjsConfig.ts:14</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class"><a id="useComputeApi" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>use<wbr/>Compute<wbr/>Api</span><a href="#useComputeApi" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">use<wbr/>Compute<wbr/>Api<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">null</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol"> = null</span></div>
@@ -163,7 +164,14 @@ under the identity in the JES context.  If <code>useComputeApi</code> is <code>n
 triggered using the APIs instead of the Job Execution Web Service broker.</p>
 </div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/sasjs/adapter/blob/f1e1b33/src/types/SASjsConfig.ts#L61">types/SASjsConfig.ts:61</a></li></ul></aside></section></section></div>
+<li>Defined in <a href="https://github.com/sasjs/adapter/blob/5756638/src/types/SASjsConfig.ts#L65">types/SASjsConfig.ts:65</a></li></ul></aside></section>
+<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class"><a id="verbose" class="tsd-anchor"></a>
+<h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>verbose</span><a href="#verbose" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
+<div class="tsd-signature">verbose<span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol"> = true</span></div>
+<div class="tsd-comment tsd-typography"><p>Set to <code>true</code> to enable verbose mode that will log a summary of every HTTP response.</p>
+</div><aside class="tsd-sources">
+<ul>
+<li>Defined in <a href="https://github.com/sasjs/adapter/blob/5756638/src/types/SASjsConfig.ts#L51">types/SASjsConfig.ts:51</a></li></ul></aside></section></section></div>
 <div class="col-4 col-menu menu-sticky-wrap menu-highlight">
 <div class="tsd-navigation settings">
 <details class="tsd-index-accordion"><summary class="tsd-accordion-summary">
@@ -204,7 +212,8 @@ triggered using the APIs instead of the Job Execution Web Service broker.</p>
 <li class="tsd-kind-property tsd-parent-kind-class"><a href="types.SASjsConfig.html#requestHistoryLimit" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-1024-path"></use><use href="#icon-1024-text"></use></svg>request<wbr/>History<wbr/>Limit?</a></li>
 <li class="tsd-kind-property tsd-parent-kind-class"><a href="types.SASjsConfig.html#serverType" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-1024-path"></use><use href="#icon-1024-text"></use></svg>server<wbr/>Type</a></li>
 <li class="tsd-kind-property tsd-parent-kind-class"><a href="types.SASjsConfig.html#serverUrl" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-1024-path"></use><use href="#icon-1024-text"></use></svg>server<wbr/>Url</a></li>
-<li class="tsd-kind-property tsd-parent-kind-class"><a href="types.SASjsConfig.html#useComputeApi" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-1024-path"></use><use href="#icon-1024-text"></use></svg>use<wbr/>Compute<wbr/>Api</a></li></ul></li></ul></nav></div></div>
+<li class="tsd-kind-property tsd-parent-kind-class"><a href="types.SASjsConfig.html#useComputeApi" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-1024-path"></use><use href="#icon-1024-text"></use></svg>use<wbr/>Compute<wbr/>Api</a></li>
+<li class="tsd-kind-property tsd-parent-kind-class"><a href="types.SASjsConfig.html#verbose" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-1024-path"></use><use href="#icon-1024-text"></use></svg>verbose?</a></li></ul></li></ul></nav></div></div>
 <div class="container tsd-generator">
 <p>Generated using <a href="https://typedoc.org/" target="_blank">TypeDoc</a></p></div>
 <div class="overlay"></div><script src="../assets/main.js"></script></body></html>
