--- a/modules/types.html
+++ b/modules/types.html
@@ -16,7 +16,7 @@
 <li><a href="types.html">types</a></li></ul>
 <h1>Module types</h1></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/sasjs/adapter/blob/0359fcb/src/types/index.ts#L1">types/index.ts:1</a></li></ul></aside>
+<li>Defined in <a href="https://github.com/sasjs/adapter/blob/5dfee30/src/types/index.ts#L1">types/index.ts:1</a></li></ul></aside>
 <section class="tsd-panel-group">
 <section class="tsd-panel tsd-typography"></section></section>
 <section class="tsd-panel-group tsd-index-group">
@@ -25,6 +25,7 @@
 <section class="tsd-index-section">
 <h3 class="tsd-index-heading">Enumerations</h3>
 <div class="tsd-index-list"><a href="../enums/types.LoginMechanism.html" class="tsd-index-link tsd-kind-enum tsd-parent-kind-module"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><rect fill="var(--color-icon-background)" stroke="var(--color-ts-enum)" stroke-width="1.5" x="1" y="1" width="22" height="22" rx="6" id="icon-8-path"></rect><path d="M9.45 16V7.24H14.49V8.224H10.518V10.936H14.07V11.908H10.518V15.016H14.49V16H9.45Z" fill="var(--color-text)" id="icon-8-text"></path></svg><span>Login<wbr/>Mechanism</span></a>
+<a href="../enums/types.SessionState.html" class="tsd-index-link tsd-kind-enum tsd-parent-kind-module"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-8-path"></use><use href="#icon-8-text"></use></svg><span>Session<wbr/>State</span></a>
 </div></section>
 <section class="tsd-index-section">
 <h3 class="tsd-index-heading">Classes</h3>
@@ -58,6 +59,7 @@
 <a href="../interfaces/types.Job.html" class="tsd-index-link tsd-kind-interface tsd-parent-kind-module"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-256-path"></use><use href="#icon-256-text"></use></svg><span>Job</span></a>
 <a href="../interfaces/types.JobDefinition.html" class="tsd-index-link tsd-kind-interface tsd-parent-kind-module"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-256-path"></use><use href="#icon-256-text"></use></svg><span>Job<wbr/>Definition</span></a>
 <a href="../interfaces/types.JobResult.html" class="tsd-index-link tsd-kind-interface tsd-parent-kind-module"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-256-path"></use><use href="#icon-256-text"></use></svg><span>Job<wbr/>Result</span></a>
+<a href="../interfaces/types.JobSessionManager.html" class="tsd-index-link tsd-kind-interface tsd-parent-kind-module"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-256-path"></use><use href="#icon-256-text"></use></svg><span>Job<wbr/>Session<wbr/>Manager</span></a>
 <a href="../interfaces/types.Link.html" class="tsd-index-link tsd-kind-interface tsd-parent-kind-module"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-256-path"></use><use href="#icon-256-text"></use></svg><span>Link</span></a>
 <a href="../interfaces/types.LoginOptions.html" class="tsd-index-link tsd-kind-interface tsd-parent-kind-module"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-256-path"></use><use href="#icon-256-text"></use></svg><span>Login<wbr/>Options</span></a>
 <a href="../interfaces/types.LoginResult.html" class="tsd-index-link tsd-kind-interface tsd-parent-kind-module"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-256-path"></use><use href="#icon-256-text"></use></svg><span>Login<wbr/>Result</span></a>
@@ -102,6 +104,7 @@
 <nav class="tsd-navigation secondary menu-sticky">
 <ul>
 <li class="tsd-kind-enum tsd-parent-kind-module"><a href="../enums/types.LoginMechanism.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-8-path"></use><use href="#icon-8-text"></use></svg>Login<wbr/>Mechanism</a></li>
+<li class="tsd-kind-enum tsd-parent-kind-module"><a href="../enums/types.SessionState.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-8-path"></use><use href="#icon-8-text"></use></svg>Session<wbr/>State</a></li>
 <li class="tsd-kind-class tsd-parent-kind-module"><a href="../classes/types.AuthorizeError.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-128-path"></use><use href="#icon-128-text"></use></svg>Authorize<wbr/>Error</a></li>
 <li class="tsd-kind-class tsd-parent-kind-module"><a href="../classes/types.CertificateError.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-128-path"></use><use href="#icon-128-text"></use></svg>Certificate<wbr/>Error</a></li>
 <li class="tsd-kind-class tsd-parent-kind-module"><a href="../classes/types.ComputeJobExecutionError.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-128-path"></use><use href="#icon-128-text"></use></svg>Compute<wbr/>Job<wbr/>Execution<wbr/>Error</a></li>
@@ -129,6 +132,7 @@
 <li class="tsd-kind-interface tsd-parent-kind-module"><a href="../interfaces/types.Job.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-256-path"></use><use href="#icon-256-text"></use></svg>Job</a></li>
 <li class="tsd-kind-interface tsd-parent-kind-module"><a href="../interfaces/types.JobDefinition.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-256-path"></use><use href="#icon-256-text"></use></svg>Job<wbr/>Definition</a></li>
 <li class="tsd-kind-interface tsd-parent-kind-module"><a href="../interfaces/types.JobResult.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-256-path"></use><use href="#icon-256-text"></use></svg>Job<wbr/>Result</a></li>
+<li class="tsd-kind-interface tsd-parent-kind-module"><a href="../interfaces/types.JobSessionManager.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-256-path"></use><use href="#icon-256-text"></use></svg>Job<wbr/>Session<wbr/>Manager</a></li>
 <li class="tsd-kind-interface tsd-parent-kind-module"><a href="../interfaces/types.Link.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-256-path"></use><use href="#icon-256-text"></use></svg>Link</a></li>
 <li class="tsd-kind-interface tsd-parent-kind-module"><a href="../interfaces/types.LoginOptions.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-256-path"></use><use href="#icon-256-text"></use></svg>Login<wbr/>Options</a></li>
 <li class="tsd-kind-interface tsd-parent-kind-module"><a href="../interfaces/types.LoginResult.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-256-path"></use><use href="#icon-256-text"></use></svg>Login<wbr/>Result</a></li>
